Changed algorithm and commented
Changed Graph implementation to use outgoing adjacency list, switched topSort to Kahn's algorithm instead of DFS, and fully commented the document.